data/httproute-parent.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: httproute-parent
  namespace: httpbin
spec:
  parentRefs:
  - name: http
    namespace: gloo-system
  hostnames:
    - www.example3.com
    - www.example4.com
  rules:
    - matches:
      - path:
          type: PathPrefix
          value: /
      backendRefs:
        - group: gateway.networking.k8s.io
          kind: HTTPRoute
          name: '*'
          namespace: httpbin
